--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
