--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.0",
     "universal-cookie": "^7.2.1"
   },
   "devDependencies": {
