--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
-    "@mui/material": "^6.1.4",
+    "@mui/material": "^6.1.5",
+    "@mui/x-date-pickers": "^7.22.0",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
