--- a/app/package.json
+++ b/app/package.json
@@ -15,11 +15,12 @@
     "@mui/material": "^6.1.5",
     "@mui/x-date-pickers": "^7.22.0",
     "date-fns": "^4.1.0",
+    "mui": "^0.0.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "recharts": "^2.13.0",
+    "recharts": "^2.13.2",
     "universal-cookie": "^7.2.1"
   },
   "devDependencies": {
